--- a/src/utils/css/bodyAUStyles.css
+++ b/src/utils/css/bodyAUStyles.css
@@ -1,10 +1,11 @@
 body, html{
     margin: 0%;
     padding: 0%;
+    font-family:Edmondsans;
 }
 .banner img{
     margin-top: 0.2%;
-    height: 180px;
+    height: auto;
     width: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -19,5 +20,44 @@ body, html{
     margin-top: 2%;
     padding-bottom: 4%;
     padding-top: 3%;
+    padding-left: 5%;
+    padding-right: 5%;
     text-decoration: none;
+    font-size: 120%;
+}
+.integrantes{
+    display: flex;
+    margin-top: 4%;
+    background-color: #A9D18E;
+    margin-left: 8%;
+    margin-right: 8%;
+    margin-bottom: 2%;
+    padding:2px;
+}
+.integrantes img{
+    margin-top: 5%;
+    border: 8px solid #548235;
+    background-color: black ;
+    border-radius: 50%;
+    height: auto;
+    width: 40%;
+    padding: 2%;
+}
+p{
+    padding: 5%;
+    background-color: white;
+    border: 8px solid #548235;
+    text-align: justify;
+    margin: 7%;
+}
+.persona{
+    border-right: 50px solid white;
+}
+@media only screen and (max-width:768px){
+    .objetivos{
+        font-size: 100%;
+    }
+    .integrantes{
+        text-align: center;
+    }
 }
